# init-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt
doc/: hello.adoc
include/: interface.h
module/: CMakeLists.txt  Math.cpp  Math.h
src/: CMakeLists.txt  main.cpp
src/include/: Hello.h
test/: CMakeLists.txt  unit-tests.cpp
